--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -493,6 +493,11 @@
   color: #acacbc;
   line-height: 1;
 
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
   @include --max-lg {
     font-size: 11px;
   }
