--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -786,3 +786,50 @@
     align-items: flex-end;
   }
 }
+
+.footer-links {
+  margin-bottom: 24px;
+  margin-top: 24px;
+
+  @include --lg {
+    display: none;
+  }
+}
+
+.footer-links__title {
+  color: #000;
+  font-size: 20px;
+  line-height: 1;
+  text-transform: uppercase;
+  border-bottom: 1px solid #edeff1;
+  text-align: center;
+  padding-bottom: 5px;
+  margin-bottom: 12px;
+}
+
+.footer-links__list {
+  justify-content: normal;
+  margin: 0 -5px;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+}
+
+.footer-links__list a {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  min-height: 36px;
+  justify-content: center;
+  text-transform: lowercase;
+  background-color: #fff;
+  font-size: 12px;
+  line-height: 1;
+  padding: 4px 5px 6px;
+  border-right: 1px solid #fff;
+  text-decoration: none;
+  color: #000;
+}
+
+.footer-links__list a:hover {
+  color: #000;
+}
