--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -668,7 +668,7 @@
 .product-pricing {
   display: grid;
   align-items: center;
-  grid-template-columns: auto 1fr auto 4fr;
+  grid-template-columns: auto 1fr auto 1fr auto;
   grid-template-rows: auto 16px auto;
   grid-auto-columns: 1fr;
   gap: 0px 0px;
