--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -472,6 +472,7 @@
   grid-template-rows: auto 12px auto;
   grid-auto-columns: 1fr;
   gap: 0px 0px;
+  position: relative;
   grid-auto-flow: row;
   align-items: center;
   grid-template-areas:
@@ -487,10 +488,9 @@
   @include --max-lg {
     align-items: flex-start;
     &:has(.product-meta__article) {
-      grid-template-areas:
-        'article article article'
-        '. . .'
-        'rating . share';
+      grid-template-areas: 'article . rating . share';
+      grid-template-columns: auto 1fr auto 1fr auto;
+      grid-template-rows: auto;
     }
   }
 }
@@ -627,6 +627,12 @@
 
   @include --max-lg {
     gap: 8px;
+    /* переносим на угол фото */
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    margin-top: 12px;
   }
 }
 
