--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -499,7 +499,7 @@
   grid-area: article;
   font-size: 14px;
   color: #acacbc;
-  line-height: 1;
+  line-height: 24px;
 
   a {
     color: inherit;
