--- a/src/scss/filter.scss
+++ b/src/scss/filter.scss
@@ -219,6 +219,79 @@
   }
 }
 
+.brand-filter {
+}
+
+.brand-filter__title {
+  padding: 0 10px;
+  font-size: 14px;
+  color: #222222;
+  height: 48px;
+  border-radius: 12px;
+  background-color: rgba(9, 156, 189, 0.10196078431372549);
+  display: flex;
+  align-items: center;
+}
+
+.brand-filter__items ul {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 16px 8px;
+  margin: 0;
+  list-style: none;
+}
+
+.brand-filter__items a {
+  font-size: 14px;
+  line-height: 18px;
+  color: #4c4c4c;
+  text-decoration: none;
+}
+
+.brand-filter__items a:hover {
+  text-decoration: underline;
+}
+
+.filter-switch__toggle {
+  font-size: 16px;
+  line-height: 1;
+  color: #585858;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  border: none;
+  background: transparent;
+  padding: 0 16px;
+  margin: 0 0 12px;
+  cursor: pointer;
+  background-color: #fff;
+  border: 1px solid transparent;
+  border-radius: 16px;
+  &:hover {
+    filter: drop-shadow(0 0 2.5px rgba(0, 25, 41, 0.08));
+    border-color: #e2e2df;
+  }
+  svg {
+    margin-left: -6px;
+    margin-right: 6px;
+  }
+  @include --max-lg {
+    font-size: 12px;
+    height: 24px;
+    padding: 0 12px;
+    margin: 0 -12px;
+    border-radius: 12px;
+    svg {
+      margin-left: -4px;
+      margin-right: 4px;
+      width: 12px;
+      height: 12px;
+    }
+  }
+}
+
 .view-filter {
 }
 
