--- a/src/scss/ProductCard.scss
+++ b/src/scss/ProductCard.scss
@@ -15,6 +15,7 @@
   .quantity {
     width: 72px;
     height: 44px;
+
     @include --max-xl {
       width: 44px;
       height: 30px;
@@ -36,6 +37,7 @@
   .quantity__plus,
   .quantity__minus {
     width: 30px;
+
     @include --max-xl {
       width: 16px;
       font-size: 14px;
@@ -75,8 +77,7 @@
   }
 }
 
-.product-card__form {
-}
+.product-card__form {}
 
 .product-card__flags {
   position: absolute;
@@ -109,15 +110,18 @@
   min-width: 32px;
   border-radius: 4px;
   padding: 0 2px;
+
   &_new {
     color: #000;
     background-color: #5fd7f6;
     border-color: #5fd7f6;
   }
+
   &_popular {
     color: #f18a16;
     border-color: #f18a16;
   }
+
   &_sale {
     color: #fff;
     background-color: #fe0000;
@@ -179,15 +183,19 @@
   justify-content: center;
   cursor: pointer;
   padding: 0;
+
   &[data-msfavorites-state='active'] {
     color: #0699bc;
   }
+
   &[data-mscomparison-state='active'] {
     color: #0699bc;
   }
+
   @include --hover {
     color: #f28316;
   }
+
   @include --max-xl {
     width: 28px;
     height: 28px;
@@ -200,6 +208,7 @@
   flex-wrap: wrap;
   column-gap: 12px;
   row-gap: 4px;
+
   @include --max-xl {
     column-gap: 8px;
     row-gap: 4px;
@@ -211,6 +220,7 @@
   color: rgb(0, 0, 0);
   font-weight: bold;
   line-height: 1;
+
   @include --max-xl {
     font-size: 14px;
   }
@@ -221,6 +231,7 @@
   color: #9c9c9c;
   // text-decoration: line-through;
   line-height: 1;
+
   @include --max-xl {
     font-size: 10px;
   }
@@ -231,6 +242,7 @@
   flex-grow: 1;
   width: 100%;
   overflow: hidden;
+
   @include --max-xl {
     margin-top: 8px;
   }
@@ -242,9 +254,11 @@
   color: #000;
   text-decoration: none;
   line-height: 20px;
+
   @include --hover {
     color: #f18a16;
   }
+
   @include --max-xl {
     font-size: 12px;
     line-height: 1.15;
@@ -254,12 +268,28 @@
 .product-card__article {
   font-size: 14px;
   line-height: 1;
-  margin-top: 8px;
+  margin-top: 12px;
   color: #9c9c9c;
 
   a {
     color: inherit;
     text-decoration: none;
+  }
+
+  span {
+    display: inline-flex;
+    gap: 2px;
+    align-items: center;
+    cursor: pointer;
+
+    &::after {
+      content: '';
+      display: inline-flex;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath fill='currentColor' d='M14 8H4c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V10c0-1.103-.897-2-2-2'/%3E%3Cpath fill='currentColor' d='M20 2H10a2 2 0 0 0-2 2v2h8a2 2 0 0 1 2 2v8h2a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2'/%3E%3C/svg%3E");
+      width: 14px;
+      height: 14px;
+      background-size: cover;
+    }
   }
 
   @include --max-xl {
@@ -269,7 +299,7 @@
 }
 
 .product-card__controls {
-  margin-top: 24px;
+  margin-top: 12px;
   display: grid;
   gap: 10px;
   grid-template-columns: 44px 72px 1fr;
@@ -279,6 +309,7 @@
     grid-template-columns: 30px 44px 1fr;
     margin-top: 8px;
   }
+
   @include --max-md {
     gap: 3px;
     grid-template-columns: 44px 1fr;
@@ -300,19 +331,24 @@
   padding: 0;
   cursor: pointer;
   font-size: 16px;
+
   @include --hover {
     background: #e8e8e8;
     color: #686868;
   }
+
   @include --max-md {
     display: none;
   }
+
   .product-card & {
     height: 44px;
     width: 44px;
+
     @include --max-xl {
       height: 30px;
       width: 30px;
+
       svg {
         width: 14px;
         height: 14px;
@@ -338,36 +374,44 @@
   font-size: 16px;
   white-space: nowrap;
   font-weight: 500;
+
   [data-product-form]:not([data-product-form-status='added']) & {
     display: none;
   }
+
   svg {
     margin-top: -2px;
   }
+
   @include --hover {
     background: #eed20e;
     color: #000;
   }
+
   @include --max-lg {
     font-size: 14px;
     height: 48px;
     padding: 0 12px;
   }
+
   .product-card & {
     gap: 4px;
     padding: 0 12px;
     border-radius: 4px;
     height: 44px;
     text-transform: initial;
+
     @include --max-xl {
       font-size: 12px;
       height: 30px;
       gap: 2px;
+
       svg {
         width: 14px;
         height: 14px;
       }
     }
+
     @include --max-md {
       padding-left: 4px;
       padding-right: 4px;
@@ -392,35 +436,43 @@
   font-size: 16px;
   white-space: nowrap;
   font-weight: 500;
+
   [data-product-form]:not([data-product-form-status='ready']) & {
     display: none;
   }
+
   svg {
     margin-top: -2px;
   }
+
   @include --hover {
     background: #0283a2;
   }
+
   @include --max-lg {
     font-size: 14px;
     height: 48px;
     padding: 0 12px;
   }
+
   .product-card & {
     gap: 4px;
     padding: 0 12px;
     border-radius: 4px;
     height: 44px;
     text-transform: initial;
+
     @include --max-xl {
       font-size: 12px;
       height: 30px;
       gap: 2px;
+
       svg {
         width: 14px;
         height: 14px;
       }
     }
+
     @include --max-md {
       padding-left: 4px;
       padding-right: 4px;
@@ -445,35 +497,43 @@
   font-size: 16px;
   white-space: nowrap;
   font-weight: 500;
+
   [data-product-form]:not([data-product-form-status='expected']) & {
     display: none;
   }
+
   svg {
     margin-top: -2px;
   }
+
   @include --hover {
     background: #7e7e7e;
   }
+
   @include --max-lg {
     font-size: 14px;
     height: 48px;
     padding: 0 12px;
   }
+
   .product-card & {
     gap: 4px;
     padding: 0 12px;
     border-radius: 4px;
     height: 44px;
     text-transform: initial;
+
     @include --max-xl {
       font-size: 12px;
       height: 30px;
       gap: 2px;
+
       svg {
         width: 14px;
         height: 14px;
       }
     }
+
     @include --max-md {
       padding-left: 4px;
       padding-right: 4px;
@@ -488,15 +548,18 @@
   margin: 0 auto 12px;
   position: relative;
   user-select: none;
+
   img {
     max-width: 100%;
     height: auto;
     display: block;
   }
+
   @include --max-xl {
     width: 180px;
     height: 180px;
   }
+
   @include --max-md {
     width: 130px;
     height: 130px;
@@ -515,6 +578,7 @@
     width: 180px;
     height: 180px;
   }
+
   @include --max-md {
     width: 130px;
     height: 130px;
@@ -557,11 +621,9 @@
   height: auto;
 }
 
-.product-options {
-}
+.product-options {}
 
-.product-option {
-}
+.product-option {}
 
 .product-option__label {
   font-size: 14px;
@@ -581,6 +643,7 @@
   width: calc(var(--option-items-size) * 1);
   position: relative;
   cursor: pointer;
+
   input {
     display: block;
     position: absolute;
@@ -593,6 +656,7 @@
     background: transparent;
     border-radius: 0;
   }
+
   span {
     display: flex;
     align-items: center;
@@ -610,11 +674,13 @@
     background: #fff;
     color: #000;
   }
-  input:checked + span {
+
+  input:checked+span {
     color: #fff;
     background: #0699bc;
     border-color: #0699bc;
   }
+
   &:hover span {
     background: #fff;
     border-color: #ffed00;
@@ -624,7 +690,8 @@
 .modal-options__submit {
   margin-top: 16px;
   display: flex;
-  > * {
+
+  >* {
     flex-grow: 1;
   }
 }
@@ -632,13 +699,13 @@
 .modal-options__product {
   margin-top: 12px;
   display: flex;
-  > * {
+
+  >* {
     flex-grow: 1;
   }
 }
 
-.cart-success {
-}
+.cart-success {}
 
 .cart-success__product {
   display: flex;
@@ -655,6 +722,7 @@
   display: flex;
   width: 160px;
   flex-shrink: 0;
+
   img {
     max-width: 100%;
     height: auto;
@@ -665,16 +733,17 @@
   }
 }
 
-.cart-success__product-info {
-}
+.cart-success__product-info {}
 
 .cart-success__product-desc {
   line-height: 1.333;
   font-size: 18px;
+
   a {
     text-decoration: underline;
     color: inherit;
     display: inline-block;
+
     &:hover {
       color: #f18a16;
     }
@@ -702,7 +771,7 @@
   margin-top: 24px;
   align-items: center;
 
-  > * {
+  >* {
     flex-grow: 1;
   }
 
