--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -348,7 +348,7 @@
 .cart-item {
   display: grid;
   grid-template-columns:
-    30fr 36px minmax(min-content, 8fr) 36px 112px 36px auto 36px minmax(min-content, 10fr) 36px 80px;
+    30fr 36px auto 36px 112px 36px auto 36px auto 36px 80px;
   grid-template-rows: auto;
   grid-auto-columns: 1fr;
   gap: 0;
@@ -357,17 +357,16 @@
 
   @include --max-2xl {
     grid-template-columns:
-      30fr 24px minmax(min-content, 8fr) 24px 112px 24px auto 24px minmax(min-content, 10fr) 24px 32px;
+      30fr 24px auto 24px 112px 24px auto 24px auto 24px 32px;
   }
 
   @include --max-xl {
     grid-template-columns:
-      30fr 16px minmax(min-content, 8fr) 16px 96px 16px auto 16px minmax(min-content, 10fr) 16px 28px;
+      30fr 16px auto 16px 96px 16px auto 16px auto 16px 28px;
   }
 
   @include --max-lg {
-    grid-template-columns: 64px 24px minmax(min-content, 8fr) 16px 96px 16px auto 16px minmax(min-content,
-        10fr);
+    grid-template-columns: 64px 24px auto 16px 96px 16px auto 16px auto;
     grid-template-rows: auto 16px auto;
     grid-template-areas:
       'product product product product product product product product product'
@@ -376,7 +375,7 @@
   }
 
   @include --max-md {
-    grid-template-columns: 64px 24px min-content 1fr min-content 1fr min-content;
+    grid-template-columns: 64px 24px auto 1fr auto 1fr auto;
     grid-template-rows: auto 24px auto 24px auto;
     grid-template-areas:
       'product product product product product product product'
@@ -780,10 +779,6 @@
   @include --max-xl {
     line-height: 28px;
     font-size: 16px;
-  }
-
-  @include --max-lg {
-    text-align: right;
   }
 }
 
