--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -169,16 +169,22 @@
 
 .product-gallery-main__viewport {
   overflow: hidden;
+  width: 100%;
 }
 
 .product-gallery-main__container {
   display: flex;
   grid-column-gap: var(--carousel-gap);
   height: 100%;
+  width: 100%;
 }
 
 .product-gallery-main__slide {
-  flex: 0 0 calc(100% / var(--carousel-columns) - var(--carousel-gap) * (var(--carousel-columns) - 1) / var(--carousel-columns));
+  flex: 0 0
+    calc(
+      100% / var(--carousel-columns) - var(--carousel-gap) * (var(--carousel-columns) - 1) /
+        var(--carousel-columns)
+    );
   min-width: 0;
   position: relative;
   display: flex;
@@ -305,7 +311,11 @@
   justify-content: center;
   align-items: center;
   aspect-ratio: 1 / 1;
-  flex: 0 0 calc(100% / var(--carousel-columns) - var(--carousel-gap) * (var(--carousel-columns) - 1) / var(--carousel-columns));
+  flex: 0 0
+    calc(
+      100% / var(--carousel-columns) - var(--carousel-gap) * (var(--carousel-columns) - 1) /
+        var(--carousel-columns)
+    );
 
   [data-product-gallery-fullscreen] & {
     @include --md {
@@ -462,7 +472,8 @@
   }
 }
 
-.product-rating {}
+.product-rating {
+}
 
 .product-rating__stars {
   --size: 24px;
@@ -955,7 +966,8 @@
   }
 }
 
-#comments-wrapper {}
+#comments-wrapper {
+}
 
 #comments {
   padding: 0;
@@ -1175,7 +1187,7 @@
 .rating-details__add {
   grid-area: add;
 
-  >* {
+  > * {
     width: 100%;
 
     svg {
@@ -1215,7 +1227,8 @@
   }
 }
 
-.reviews-form__cell {}
+.reviews-form__cell {
+}
 
 .reviews-form__cell_wide {
   @include --md {
@@ -1285,7 +1298,8 @@
   align-items: center;
 }
 
-.product-delivery {}
+.product-delivery {
+}
 
 .product-delivery__title {
   font-size: 20px;
@@ -1301,7 +1315,8 @@
   }
 }
 
-.product-delivery__calc {}
+.product-delivery__calc {
+}
 
 .product-delivery__info {
   margin-top: 24px;
@@ -1325,7 +1340,8 @@
   }
 }
 
-.product-similar {}
+.product-similar {
+}
 
 .product-similar__title {
   height: 46px;
@@ -1391,7 +1407,11 @@
 }
 
 .product-slider__slide {
-  flex: 0 0 calc(100% / var(--carousel-columns) - var(--carousel-gap) * (var(--carousel-columns) - 1) / var(--carousel-columns));
+  flex: 0 0
+    calc(
+      100% / var(--carousel-columns) - var(--carousel-gap) * (var(--carousel-columns) - 1) /
+        var(--carousel-columns)
+    );
   min-width: 0;
   position: relative;
   display: flex;
